Remove desktop role usage

The desktop role gets used as the root of the entire automation tree and should not be used elsewhere.

This change adds a comment in the enums file where views authors hopefully look for the list of roles.

Note that in ChromeVox, using the desktop role amounts to a no-op, since ChromeVox only checks desktop role when it asks for a AutomationNode.prototype.root.

TBR=tsepez@chromium.org

Bug: 787101
Change-Id: I9f1b7a7a71f69f43ebc265cf0b61d0b0bdb4249f
Reviewed-on: https://chromium-review.googlesource.com/896557
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534514}
Former-commit-id: 2fe04bfc9ff43b8b84cd4b03ffbc3244c3b9cc4c